--- a/TP3-1/src/main/resources/templates/template.html
+++ b/TP3-1/src/main/resources/templates/template.html
@@ -10,12 +10,12 @@ src="webjars/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 <head>
 <meta charset="utf-8">
-<title>Gestion des Produits</title>
+<title>Gestion des Vehicles</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
  <!-- Brand -->
- <a class="navbar-brand" href="#">Gestion Produits</a>
+ <a class="navbar-brand" href="#">Gestion Vehicles</a>
  <!-- Links -->
  <ul class="navbar-nav">
  <li class="nav-item">
